# AI-Engineer-Journey

./: .env  README.md  icebreaker.py  interviewAgentPrototype.py  requirements.txt
AI-Engineer-Roadmap/: .gitignore  MISSING_COMPONENTS_ANALYSIS.md  README.md  roadmap.md
AI-Engineer-Roadmap/00_foundations/: README.md  requirements.txt
AI-Engineer-Roadmap/00_foundations/computer_science_fundamentals/: README.md
AI-Engineer-Roadmap/00_foundations/mathematical_foundations/: README.md
AI-Engineer-Roadmap/01_python_fundamentals/: README.md  pyproject.toml  requirements.txt
AI-Engineer-Roadmap/01_python_fundamentals/src/: __init__.py
AI-Engineer-Roadmap/01_python_fundamentals/src/data_processing/: __init__.py  pipeline.py
AI-Engineer-Roadmap/01_python_fundamentals/tests/: test_data_processing.py
AI-Engineer-Roadmap/02_data_science_basics/: README.md  requirements.txt
AI-Engineer-Roadmap/03_machine_learning/: README.md  requirements.txt
AI-Engineer-Roadmap/04_deep_learning/: README.md  requirements.txt
AI-Engineer-Roadmap/05_langchain_agents/: README.md  requirements.txt
AI-Engineer-Roadmap/06_projects/: README.md  requirements.txt
AI-Engineer-Roadmap/07_mle_to_ai_engineer/: README.md  requirements.txt
AI-Engineer-Roadmap/08_advanced_ai_topics/: README.md  requirements.txt
AI-Engineer-Roadmap/09_ai_ethics_responsibility/: README.md  requirements.txt
AI-Engineer-Roadmap/10_cloud_ai_platforms/: README.md  requirements.txt
AI-Engineer-Roadmap/11_interview_preparation/: README.md  requirements.txt
(+11 files in other folders)
